'部门管理页面、'

--- a/src/style/rule.less
+++ b/src/style/rule.less
@@ -185,6 +185,11 @@
           color: #fff;
           margin-top: 10px;
           line-height: 30px;
+          .icon-41{
+            font-size: 14px;
+            transform: rotateY(180deg);
+            display: inline-block;
+          }
         }
       }
       .rule-right {
